// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recursive > when using an schema two time but non recursive 1`] = `
{
  "$ref": "#/definitions/noneRecursive",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "noneRecursive": {
      "properties": {
        "one": {
          "properties": {
            "prop": {
              "type": "string",
            },
          },
          "required": [
            "prop",
          ],
          "type": "object",
        },
        "two": {
          "properties": {
            "prop": {
              "type": "string",
            },
          },
          "required": [
            "prop",
          ],
          "type": "object",
        },
      },
      "required": [
        "one",
        "two",
      ],
      "type": "object",
    },
  },
}
`;

exports[`recursive > with array 1`] = `
{
  "$ref": "#/definitions/RecursiveTuple",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "RecursiveTuple": {
      "$ref": "#/definitions/RecursiveType0",
    },
    "RecursiveType0": {
      "items": {
        "anyOf": [
          {
            "type": "string",
          },
          {
            "$ref": "#/definitions/RecursiveType0",
          },
        ],
      },
      "type": "array",
    },
  },
}
`;

exports[`recursive > with complex recursive schema 1`] = `
{
  "$ref": "#/definitions/RecursiveObject",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "RecursiveObject": {
      "$ref": "#/definitions/RecursiveType0",
    },
    "RecursiveType0": {
      "properties": {
        "array": {
          "$ref": "#/definitions/RecursiveType2",
        },
        "recursiveProp": {
          "properties": {
            "test": {
              "$ref": "#/definitions/RecursiveType0",
            },
          },
          "required": [
            "test",
          ],
          "type": "object",
        },
        "tuple": {
          "$ref": "#/definitions/RecursiveType1",
        },
      },
      "required": [
        "recursiveProp",
        "tuple",
        "array",
      ],
      "type": "object",
    },
    "RecursiveType1": {
      "additionalItems": false,
      "items": [
        {
          "type": "string",
        },
        {
          "items": {
            "anyOf": [
              {
                "$ref": "#/definitions/RecursiveType1",
              },
              {
                "type": "string",
              },
            ],
          },
          "type": "array",
        },
      ],
      "maxItems": 2,
      "minItems": 2,
      "type": "array",
    },
    "RecursiveType2": {
      "items": {
        "anyOf": [
          {
            "type": "string",
          },
          {
            "$ref": "#/definitions/RecursiveType2",
          },
        ],
      },
      "type": "array",
    },
  },
}
`;

exports[`recursive > with conflict identified object schema 1`] = `
{
  "$ref": "#/definitions/RecursiveObject",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "RecursiveObject": {
      "$ref": "#/definitions/Test",
    },
    "Test": {
      "properties": {
        "recursiveProp": {
          "$ref": "#/definitions/Test",
        },
      },
      "required": [
        "recursiveProp",
      ],
      "type": "object",
    },
  },
}
`;

exports[`recursive > with identified objet schema  1`] = `
{
  "$ref": "#/definitions/RecursiveObject",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "RecursiveObject": {
      "properties": {
        "recursiveProp": {
          "$ref": "#/definitions/RecursiveObject",
        },
      },
      "required": [
        "recursiveProp",
      ],
      "type": "object",
    },
  },
}
`;

exports[`recursive > with tuple 1`] = `
{
  "$ref": "#/definitions/RecursiveTuple",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "RecursiveTuple": {
      "$ref": "#/definitions/RecursiveType0",
    },
    "RecursiveType0": {
      "additionalItems": false,
      "items": [
        {
          "type": "string",
        },
        {
          "items": {
            "anyOf": [
              {
                "$ref": "#/definitions/RecursiveType0",
              },
              {
                "type": "string",
              },
            ],
          },
          "type": "array",
        },
      ],
      "maxItems": 2,
      "minItems": 2,
      "type": "array",
    },
  },
}
`;

exports[`recursive > with union 1`] = `
{
  "$ref": "#/definitions/RecursiveUnion",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "RecursiveType0": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "number",
        },
        {
          "items": {
            "$ref": "#/definitions/RecursiveType0",
          },
          "type": "array",
        },
      ],
    },
    "RecursiveUnion": {
      "$ref": "#/definitions/RecursiveType0",
    },
  },
}
`;

exports[`recursive > with unknown object schema 1`] = `
{
  "$ref": "#/definitions/RecursiveObject",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "RecursiveObject": {
      "$ref": "#/definitions/RecursiveType0",
    },
    "RecursiveType0": {
      "properties": {
        "recursiveProp": {
          "$ref": "#/definitions/RecursiveType0",
        },
      },
      "required": [
        "recursiveProp",
      ],
      "type": "object",
    },
  },
}
`;
